<resources>
    <string name="app_name">Counter</string>
    <string name="button_text">%1$d %2$s</string>
    <string name="title_activity_new_counter">Add player</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="AddCounterButtonText">+</string>
    <string name="addCounterButtonText">Ещё игрок</string>
    <string name="hueLabelText">Hue</string>
    <string name="saturationLabelText">Saturation</string>
    <string name="valueLabelText">Value</string>
    <string name="defaultNickOffer">Nick</string>
    <string name="addCounter">Add</string>
    <string name="counter_name">Nick</string>
</resources>
