<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CreateCounterLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ru.degeneration.counter.activities.CreateCounterActivity"
    android:orientation="vertical">


    <EditText
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="14"
        android:inputType="textPersonName"
        android:text=""
        android:focusableInTouchMode="true"
        android:hint="@string/counter_name"/>
    <TextView
        android:id="@+id/HueLabel"
        android:text="@string/hueLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <SeekBar
        android:id="@+id/HueBar"
        android:max="360"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/SaturationLabel"
        android:text="@string/saturationLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <SeekBar
        android:id="@+id/SaturationBar"
        android:max="255"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/valueLabel"
        android:text="@string/valueLabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <SeekBar
        android:id="@+id/ValueBar"
        android:max="255"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/CommitNewCounterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addCounter"
        tools:layout_editor_absoluteX="255dp"
        tools:layout_editor_absoluteY="77dp" />


</LinearLayout>